# smart-recipe-finder

./: .dockerignore  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: backend-quality-gate.yml
alembic/: env.py
alembic/versions/: 041640134cb5_convert_image_url_string_to_image_urls_.py  3cd8dc5eb8e0_create_initial_database_with_recipes_.py  3f74c6fdcdad_add_fulltext_index_to_recipes.py  b3631ada3c4f_migrate_ingredients_from_array_to_jsonb.py  ecd40ad7497a_add_ingredients_list_string_array.py  f0dbe514fbb4_add_image_url.py
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 3cd8dc5eb8e0_create_initial_database_with_recipes_.py
app/api/v1/: api.py
app/api/v1/endpoints/: recipes.py
app/core/: config.py  s3_client.py  text_utils.py  vector_store.py
app/db/: session.py
app/models/: __init__.py  base.py  ingredient.py  recipe.py  recipe_ingredient_association.py
app/schemas/: __init__.py  ingredient.py  ingredient_base.py  recipe.py  recipe_base.py  recipe_create.py  recipe_image_delete.py  recipe_images_delete.py  recipe_update.py
app/services/: image_service.py  recipe_service.py
datasets/: evaluation_nls_queries.json  filter_test_data.json  recipe_samples.json
datasets/en/: evaluation_nls_queries.json  filter_test_data.json  recipe_samples_en.json
datasets/ru/: evaluation_nls_queries.json  filter_test_data_ru.json  recipe_samples.json  recipe_samples_ru.json
scripts/: evaluate.py  seed_db.py  verify_migration.py
tests/: conftest.py  recipe_samples.json  test_config.py  test_data.json  testing_config.py
tests/api/v1/: test_recipes.py
tests/datasets/: evaluation_nls_queries.json  filter_test_data.json  recipe_samples.json  test_data.json
