[project]
name = "smart-recipe-finder"
version = "1.1.0"
description = " RESTful API for storing, searching, and retrieving recipes with advanced filtering and natural language search capabilities. Built with Python and FastAPI."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncmy>=0.2.10",
    "chromadb>=1.3.5",
    "cryptography>=46.0.3",
    "fastapi>=0.124.0",
    "inflect>=7.5.0",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-utils>=0.42.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
]
